# emberforge

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/api/: Cargo.toml
crates/api/src/: client.rs  lib.rs  prompt_cache.rs  sse.rs
crates/api/src/providers/: anthropic_provider.rs  claw_provider.rs  mod.rs  openai_compat.rs
crates/api/tests/: client_integration.rs  ollama_live_integration.rs  openai_compat_integration.rs  provider_client_integration.rs
crates/commands/src/: buddy.rs  handlers.rs  help.rs  lib.rs  parse.rs  spec.rs  tests.rs
crates/compat-harness/src/: lib.rs
crates/ember-cli/: Cargo.toml
crates/ember-cli/src/: app.rs  args.rs  claw_alias.rs  codebase_map.rs  context.rs  doctor.rs  init.rs  input.rs  keywords.rs  main.rs  notifications.rs  render.rs  task_mgmt.rs  tool_display.rs  vim.rs
crates/ember-cli/src/ui/: animation.rs  banner.rs  capabilities.rs  hud.rs  mod.rs
crates/integration-tests/: Cargo.toml
crates/integration-tests/src/: lib.rs
crates/integration-tests/tests/: cross_crate_runtime.rs  hook_dispatch.rs  tool_pipeline.rs  tool_registry.rs
crates/lsp/src/: client.rs  error.rs  lib.rs  manager.rs
crates/plugins/src/: error.rs  hooks.rs  lib.rs  manager.rs  registry.rs  tests.rs  types.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: agent_loader.rs  app_state.rs  bash.rs  bash_classifier.rs  bash_security.rs  bridge.rs  compact.rs  config.rs  context_collapse.rs  conversation.rs  coordinator.rs  cost_tracker.rs  cron.rs  file_history.rs  file_ops.rs  git.rs  hooks.rs  ide.rs  json.rs  ledger.rs  lib.rs  mcp.rs  mcp_client.rs  mcp_stdio.rs  memory.rs  model_profiles.rs  model_router.rs  oauth.rs  output_mode.rs  permissions.rs  prompt.rs  remote.rs  sandbox.rs  session.rs  sse.rs  task_store.rs  teleport.rs  transport.rs  usage.rs
crates/server/: Cargo.toml
crates/server/src/: lib.rs
crates/telemetry/src/: lib.rs
crates/tools/: .gitignore  Cargo.toml
crates/tools/src/: error.rs  executor.rs  implementations.rs  lib.rs  registry.rs  specs.rs  team_helpers.rs  tests.rs  types.rs
docs/: CROSS_PORT_AUDIT.md  CROSS_PORT_CONTRACT.md  EMBER.md  NEXT_STEPS_PLAN.md  PARITY.md  REFINEMENT_PLAN.md  ROADMAP.md
docs/releases/: 0.1.0.md  PROCESS.md
tests/: test_terminal_startup.py
