[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[workspace.dependencies]
lsp-types = "0.97"
serde_json = "1"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_panics_doc = "warn"
missing_errors_doc = "warn"
# Error-handling policy (refs #11): panicking accessors on failure boundaries
# are disallowed. Set to `warn` for now so the existing backlog (~246 sites)
# surfaces in CI without breaking the build; ratchet both to `deny` once the
# per-crate migration sweeps land. Test code opts out via a per-module
# `#![allow(clippy::unwrap_used, clippy::expect_used)]`.
unwrap_used = "warn"
expect_used = "warn"
