[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[workspace.dependencies]
lsp-types = "0.97"
serde_json = "1"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_panics_doc = "deny"
missing_errors_doc = "deny"
# Error-handling policy (refs #11, #20): panicking accessors on failure
# boundaries are disallowed, and public fallible/panicking APIs must document
# their failure modes. After the per-crate migration sweeps (#36/#41/#42/#43/#45)
# triaged every production `unwrap()`/`expect()` — migrating real boundaries to
# `Result` and annotating the infallible sites with `#[allow(...)]` + a
# `// SAFETY:` rationale — these lints are ratcheted to `deny` to lock in the
# bar. Test code opts out via a per-module
# `#![allow(clippy::unwrap_used, clippy::expect_used)]`.
unwrap_used = "deny"
expect_used = "deny"
